# smoothdiff-experiments

./: .gitattributes  .gitignore  LICENSE  README.md
experiments/cluster/quantus-eval/: .gitattributes  .gitignore  Manifest.toml  Project.toml  README.md  apptainer.def  plot.jl  pyproject.toml  quantus_analyzers.py  requirements.txt  run.sh  run_resnet18.py  run_vgg19.py  smoothdiff.py
experiments/cluster/quantus-eval/results/256/resnet18/AvgSensitivity/: Gradient.h5  Input x Gradient.h5  Integrated Gradients.h5  LRP EpsilonAlpha2Beta1.h5  LRP EpsilonPlus.h5  Random (norm).h5  Random (square).h5  Random (sum).h5  Random.h5  SmoothDiff.h5  SmoothDiffSquare.h5  SmoothGrad.h5  SmoothGradSquare.h5
experiments/cluster/quantus-eval/results/256/resnet18/Complexity/: Gradient.h5  Input x Gradient.h5  Integrated Gradients.h5  LRP EpsilonAlpha2Beta1.h5  LRP EpsilonPlus.h5  Random (norm).h5  Random (square).h5  Random (sum).h5  SmoothDiff.h5  SmoothDiffSquare.h5  SmoothGrad.h5  SmoothGradSquare.h5
experiments/cluster/quantus-eval/results/256/resnet18/GridPG/: Gradient.h5  Input x Gradient.h5  Integrated Gradients.h5  LRP EpsilonAlpha2Beta1.h5  LRP EpsilonPlus.h5  Random (norm).h5  Random (sum).h5  SmoothDiff.h5  SmoothDiffSquare.h5  SmoothGrad.h5  SmoothGradSquare.h5
experiments/cluster/quantus-eval/results/256/resnet18/LocalLipschitzEstimate/: Gradient.h5  Input x Gradient.h5  Integrated Gradients.h5  LRP EpsilonAlpha2Beta1.h5  LRP EpsilonPlus.h5  Random (norm).h5  Random (square).h5  SmoothDiff.h5  (+4 more)
python/: pyproject.toml  requirements.txt  smoothdiff.ipynb  smoothdiff.py
(+433 files in other folders)
