[project]
name = "quantus-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.7.0",
    "cmcrameri>=1.9",
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "pillow>=11.3.0",
    "quantus>=0.6.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "zennit>=0.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
